adding user_pool to application and request to hint ATOM-196
