# api/swagger.yaml
@@ -156,6 +156,10 @@ definitions:
         type: "string"
         description: "The request audience"
         x-nullable: false
+      user_pool:
+        type: "string"
+        description: "The request user pool"
+        x-nullable: true
       state:
         type: "string"
         description: "The request state"
@@ -222,7 +226,7 @@ definitions:
         description: "The client that created the user session"
       subject:
         type: "string"
-        description: "Subject is the user subject id"        
+        description: "Subject is the user subject id"
       created_at:
         type: "integer"
         description: "The token creation time"
@@ -236,7 +240,8 @@ definitions:
     description: |
       Applications are API clients that access APIs managed by the integration
       service. Applications may provide user authentication flows.
-      Applications are managed by the `oauth.Controller`.
+      Applications are managed by the `oauth.Controller`. This library provides
+      an incomplete base definition for application clients.
     type: "object"
     required: ["name", "allowed_grants"]
     properties:
@@ -259,6 +264,11 @@ definitions:
         type: "string"
         description: "The application client secret used for oauth grants"
         readOnly: true
+      user_pools:
+        type: "array"
+        description: The user pools this application has access to.
+        items:
+          type: "string"
       app_uris:
         type: "array"
         description: |
@@ -500,7 +510,7 @@ definitions:
           Time the End-User's information was last updated. Its value is a JSON number representing the number of seconds from 1970-01-01T0:0:0Z
           as measured in UTC until the date/time.
         format: "int64"
-  
+
   ProfileRef:
     description: |
       Profile reference object for go consumers
@@ -554,7 +564,6 @@ definitions:
       import:
         package: github.com/libatomic/oauth/pkg/oauth
       type: Address
-      
 
   ErrorResponse:
     description: "A common error response"
@@ -792,7 +801,7 @@ paths:
           type: "string"
           required: true
         - name: "redirect_uri"
-          type: "string"  
+          type: "string"
           description: "The uri to redirect to after password reset"
           in: "formData"
           format: "uri"
@@ -845,7 +854,7 @@ paths:
           type: "string"
           required: true
         - name: "redirect_uri"
-          type: "string"  
+          type: "string"
           description: "The uri to redirect to after password reset request"
           in: "formData"
           format: "uri"
@@ -904,6 +913,11 @@ paths:
           in: "query"
           type: "string"
           required: true
+        - name: "user_pool"
+          in: query
+          description: "The user pool to authorize against"
+          type: "string"
+          required: false
         - name: "app_uri"
           in: query
           description: "The URL to which the authentication server redirects the browser for action"
